--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,14 +25,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="?android:attr/windowBackground"
-            app:menu="@menu/navigation"/>
+            app:menu="@menu/navigation_bottom"/>
 
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:menu="@menu/navigator"
+        app:menu="@menu/navigation_menu"
         android:layout_gravity="start"
         android:id="@+id/navigation_view"
         >
