--- a/app/src/main/res/menu/navigation_bottom.xml
+++ b/app/src/main/res/menu/navigation_bottom.xml
@@ -13,6 +13,6 @@
     <item
         android:id="@+id/bottom_other"
         android:icon="@mipmap/ic_assignment_black_24dp"
-        android:title="Other"/>
+        android:title="Wordlists"/>
 
 </menu>
