--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <include layout="@layout/navigation_action"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -35,8 +40,8 @@
         app:menu="@menu/navigation_menu"
         android:layout_gravity="start"
         android:id="@+id/navigation_view"
+        app:headerLayout="@layout/navigation_menu_header"
         >
-
     </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
