--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -2,12 +2,12 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="prm3101.group_assignment.fragment.WordListsFragment">
+             tools:context="prm3101.group_assignment.fragment.TranslateFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="WordLists fragment"/>
+        android:text="Translate fragment"/>
 
 </FrameLayout>
