--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,18 +9,22 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/base_10"
+        android:layout_margin="@dimen/base_6"
+        android:background="@drawable/shadow_round"
         android:id="@+id/te1">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/te2"
+            android:paddingLeft="@dimen/base_16"
             android:text="Chon cap do:"
+            android:textSize="@dimen/base_16"
             android:layout_centerVertical="true"/>
         <Spinner
             android:layout_width="100dp"
             android:layout_toRightOf="@+id/te2"
             android:id="@+id/static_spinner"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/base_12"
             android:layout_height="wrap_content"/>
 
@@ -29,52 +33,74 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/grey"
         android:layout_below="@+id/te1">
         <RelativeLayout
             android:layout_width="170dp"
-            android:layout_height="80dp"
-            android:background="@color/colorPrimary"
-            android:layout_margin="@dimen/base_10"
+            android:layout_height="90dp"
+            android:background="@drawable/shadow_round"
+            android:layout_margin="@dimen/base_6"
             android:id="@+id/a1">
-
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/base_20"
+                android:src="@drawable/ic_home_black_24dp"
+                android:id="@+id/image1"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_below="@+id/image1"
+                android:text="Tu vung"
+                android:layout_centerHorizontal="true"
+                android:textSize="@dimen/base_16"
+                android:layout_height="wrap_content"/>
         </RelativeLayout>
         <RelativeLayout
-            android:layout_margin="@dimen/base_10"
+            android:layout_margin="@dimen/base_6"
             android:layout_width="170dp"
-            android:layout_height="80dp"
-            android:background="@color/colorAccent"
+            android:layout_height="90dp"
+            android:background="@drawable/shadow_round"
             android:layout_toRightOf="@+id/a1"
             android:id="@+id/a2">
-
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/base_20"
+                android:src="@drawable/ic_home_black_24dp"
+                android:id="@+id/image2"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_below="@+id/image2"
+                android:text="Tu vung"
+                android:layout_centerHorizontal="true"
+                android:textSize="@dimen/base_16"
+                android:layout_height="wrap_content"/>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="170dp"
-            android:layout_height="80dp"
-            android:background="@color/colorPrimary"
-            android:layout_margin="@dimen/base_10"
+            android:layout_height="90dp"
+            android:background="@drawable/shadow_round"
+            android:layout_margin="@dimen/base_6"
             android:layout_below="@+id/a1"
             android:id="@+id/a3">
-
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/base_20"
+                android:src="@drawable/ic_home_black_24dp"
+                android:id="@+id/image3"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_below="@+id/image3"
+                android:text="Tu vung"
+                android:layout_centerHorizontal="true"
+                android:textSize="@dimen/base_16"
+                android:layout_height="wrap_content"/>
         </RelativeLayout>
-        <RelativeLayout
-            android:layout_margin="@dimen/base_10"
-            android:layout_width="170dp"
-            android:layout_height="80dp"
-            android:background="@color/colorAccent"
-            android:layout_toRightOf="@+id/a3"
-            android:layout_below="@+id/a2"
-            android:id="@+id/a4">
 
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="170dp"
-            android:layout_height="80dp"
-            android:background="@color/colorPrimary"
-            android:layout_margin="@dimen/base_10"
-            android:layout_below="@+id/a3"
-            android:id="@+id/a5">
-
-        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
