--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,6 +6,8 @@
     <dimen name="base_12">12dp</dimen>
     <dimen name="base_10">10dp</dimen>
     <dimen name="base_8">8dp</dimen>
+    <dimen name="base_6">6dp</dimen>
+    <dimen name="base_4">4dp</dimen>
     <dimen name="base_14">14dp</dimen>
     <dimen name="base_16">16dp</dimen>
     <dimen name="base_18">18dp</dimen>
