--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,21 +12,24 @@
         android:layout_margin="@dimen/base_6"
         android:background="@drawable/shadow_round"
         android:id="@+id/te1">
+
         <TextView
+            android:id="@+id/te2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/te2"
+            android:layout_centerVertical="true"
             android:paddingLeft="@dimen/base_16"
-            android:text="Chon cap do:"
-            android:textSize="@dimen/base_16"
-            android:layout_centerVertical="true"/>
+            android:text="Chọn cấp độ"
+            android:textSize="@dimen/base_16" />
+
         <Spinner
-            android:layout_width="100dp"
-            android:layout_toRightOf="@+id/te2"
             android:id="@+id/static_spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/base_12"
-            android:layout_height="wrap_content"/>
+            android:layout_marginStart="13dp"
+            android:layout_toEndOf="@+id/te2" />
 
 
     </RelativeLayout>
@@ -37,21 +40,22 @@
         android:layout_below="@+id/te1">
         <RelativeLayout
             android:layout_width="170dp"
-            android:layout_height="90dp"
+            android:layout_height="100dp"
             android:background="@drawable/shadow_round"
             android:layout_margin="@dimen/base_6"
             android:id="@+id/a1">
+
             <ImageView
+                android:id="@+id/image1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/base_20"
-                android:src="@drawable/ic_home_black_24dp"
-                android:id="@+id/image1"/>
+                android:src="@mipmap/vocabulary" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_below="@+id/image1"
-                android:text="Tu vung"
+                android:text="Từ vựng"
                 android:layout_centerHorizontal="true"
                 android:textSize="@dimen/base_16"
                 android:layout_height="wrap_content"/>
@@ -59,43 +63,45 @@
         <RelativeLayout
             android:layout_margin="@dimen/base_6"
             android:layout_width="170dp"
-            android:layout_height="90dp"
+            android:layout_height="100dp"
             android:background="@drawable/shadow_round"
             android:layout_toRightOf="@+id/a1"
             android:id="@+id/a2">
+
             <ImageView
+                android:id="@+id/image2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/base_20"
-                android:src="@drawable/ic_home_black_24dp"
-                android:id="@+id/image2"/>
+                android:src="@mipmap/kanji" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_below="@+id/image2"
-                android:text="Tu vung"
+                android:text="Hán tự"
                 android:layout_centerHorizontal="true"
                 android:textSize="@dimen/base_16"
                 android:layout_height="wrap_content"/>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="170dp"
-            android:layout_height="90dp"
+            android:layout_height="100dp"
             android:background="@drawable/shadow_round"
             android:layout_margin="@dimen/base_6"
             android:layout_below="@+id/a1"
             android:id="@+id/a3">
+
             <ImageView
+                android:id="@+id/image3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/base_20"
-                android:src="@drawable/ic_home_black_24dp"
-                android:id="@+id/image3"/>
+                android:src="@mipmap/grammar" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_below="@+id/image3"
-                android:text="Tu vung"
+                android:text="Ngữ pháp"
                 android:layout_centerHorizontal="true"
                 android:textSize="@dimen/base_16"
                 android:layout_height="wrap_content"/>
