--- a/app/src/main/res/layout/dialog_choose_search.xml
+++ b/app/src/main/res/layout/dialog_choose_search.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="15dp"
-        android:divider="@color/colorPrimaryDark">
+        android:divider="@color/grey_line">
 
         <RadioButton
             android:layout_width="match_parent"
