--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                 android:background="@color/grey"
-             tools:context="prm3101.group_assignment.fragment.HomeFragment">
+             tools:context="prm3101.group_assignment.fragment.JLPTFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
