--- a/app/src/main/res/layout/fragment_jlpt.xml
+++ b/app/src/main/res/layout/fragment_jlpt.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="prm3101.group_assignment.fragment.JLPTFragment">
+    tools:context="prm3101.group_assignment.fragment.JLPTFaaaaaragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
