--- a/app/src/main/res/menu/navigation_bottom.xml
+++ b/app/src/main/res/menu/navigation_bottom.xml
@@ -4,15 +4,15 @@
     <item
         android:id="@+id/bottom_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="Home"/>
+        android:title="Trang chủ"/>
     <item
         android:id="@+id/bottom_search"
         android:icon="@drawable/ic_search_black_24dp"
-        android:title="Search"/>
+        android:title="Tìm kiếm"/>
 
     <item
         android:id="@+id/bottom_profile"
         android:icon="@drawable/ic_account_circle_black_24dp"
-        android:title="You"/>
+        android:title="Tôi"/>
 
 </menu>
