--- a/app/src/main/res/layout/items_hiragana.xml
+++ b/app/src/main/res/layout/items_hiragana.xml
@@ -6,6 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/base_8"
         android:id="@+id/hira"
         android:textColor="@color/colorPrimaryDark"
         android:layout_centerHorizontal="true"
@@ -13,9 +14,9 @@
         />
     <View
         android:layout_width="fill_parent"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
         android:layout_height="1dp"
+        android:layout_marginTop="@dimen/base_8"
+        android:layout_below="@+id/romaji"
         android:background="@color/grey_line" />
     <TextView
         android:layout_width="wrap_content"
