--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -29,6 +29,7 @@
         android:background="@drawable/rounded_edittext"/>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
+        android:id="@+id/searchResult"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:layout_below="@+id/inputSearch"
