--- a/app/src/main/res/layout/items_kanji.xml
+++ b/app/src/main/res/layout/items_kanji.xml
@@ -10,6 +10,7 @@
         android:textSize="@dimen/base_16"
         android:textColor="@color/red"
         android:layout_marginTop="@dimen/base_10"
+        android:layout_marginBottom="@dimen/base_10"
         android:layout_marginLeft="@dimen/base_10"/>
     <TextView
         android:id="@+id/kanjiMeaning"
@@ -17,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/kanji"
         android:layout_marginTop="@dimen/base_10"
+        android:layout_marginBottom="@dimen/base_10"
         android:layout_marginLeft="@dimen/base_10"
         android:textSize="@dimen/base_16"/>
 </RelativeLayout>
