--- a/app/src/main/res/layout/items_sentence.xml
+++ b/app/src/main/res/layout/items_sentence.xml
@@ -3,8 +3,12 @@
                                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                     android:id="@+id/card_view"
                                     android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:layout_margin="@dimen/base_10"
+                                    android:layout_height="wrap_content"
+                                    android:elevation="1dp"
+                                    android:orientation="vertical"
+                                    android:layout_marginTop="@dimen/base_10"
+                                    android:layout_marginLeft="@dimen/base_10"
+                                    android:layout_marginRight="@dimen/base_10"
                                     card_view:cardCornerRadius="@dimen/base_4">
 
     <RelativeLayout
