--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,11 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/grey_line</item>
     </style>
+
     <style name="largeEdittextText">
         <item name="android:textAppearance">@android:style/TextAppearance.Large.Inverse</item>
         <item name="android:textSize">16dp</item>
@@ -17,17 +16,16 @@
         <item name="android:background">#FFB90F</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-    <!-- Base application theme. -->
+
     <style name="AppTheme_v2" parent="Theme.AppCompat.Light.NoActionBar">
-        <!--   your app branding color for the app bar -->
         <item name="colorPrimary">#3F51B5</item>
-        <!--   darker variant for the status bar and contextual app bars -->
         <item name="colorPrimaryDark">#303F9F</item>
-        <!--   theme UI controls like checkboxes and text fields -->
-        <item name="colorAccent">#FF4081</item>
+        <item name="colorAccent">@color/grey_line</item>
     </style>
+
 </resources>
