--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4CAF50</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#1f6b5b</color>
+    <color name="colorPrimaryDark_v2">#303F9F</color>
+    <color name="colorPrimaryDark">#1f6b5b</color>
     <color name="primary_light">#E5E4D7</color>
     <color name="black">#000</color>
     <color name="white">#FFF</color>
     <color name="colorAccent">#FF4081</color>
     <color name="grey">#ececec</color>
-    <color name="grey_line">#bebebe</color>
+    <color name="grey_line">#AAAAAA</color>
     <color name="bg_activity">#ededed</color>
     <color name="red">#ff0000</color>
 </resources>
